--- a/proto-build/buf.wasmd.gen.yaml
+++ b/proto-build/buf.wasmd.gen.yaml
@@ -1,8 +1,17 @@
+#version: v1
+#plugins:
+#  - remote: buf.build/prost/plugins/prost:v0.2.1-1
+#    out: .
+#  - remote: buf.build/prost/plugins/tonic:v0.2.1-1
+#    out: .
+#    opt:
+#      - no_server=true
+
 version: v1
 plugins:
-  - remote: buf.build/prost/plugins/prost:v0.2.1-1
+  - plugin: buf.build/community/neoeinstein-prost:v0.2.1
     out: .
-  - remote: buf.build/prost/plugins/tonic:v0.2.1-1
+  - plugin: buf.build/community/neoeinstein-tonic:v0.3.0
     out: .
     opt:
       - no_server=true
